<resources>
    <string name="account_name">Account Name</string>
    <string name="app_name">My Keys</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="user_name">User Name</string>

    <string name="title_section1">My Keys</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_account">Add Account</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_account">Add an Account</string>

    <string name="hello_world">Hello world!</string>
</resources>
